# agentic-rag

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml
app/: main.py
app/frontend/: package-lock.json  package.json  vite.config.js
app/frontend/src/: App.jsx
app/routers/: eval.py  search.py
core/: config.py  corpus.py  embeddings.py  qdrant_client.py
docs/tutorials/: 01-intro.md  02-evaluation.md  03-lexical.md  04-semantic.md  05-hybrid-rerank.md  06-query-understanding.md  07-graph-filesystem.md  08-multimodal.md
evals/: benchmark.py  metrics.py  synthetic_data.py
modules/01_intro/: setup.py
modules/02_evaluation/: generate_golden_set.py
modules/03_lexical/: bm25_retriever.py  indexer.py  tfidf.py
modules/03_lexical/tests/: conftest.py  test_bm25.py
modules/04_semantic/: indexer.py  semantic_retriever.py
modules/04_semantic/tests/: conftest.py  test_semantic.py
modules/05_hybrid_rerank/: hybrid_retriever.py  reranker.py
modules/05_hybrid_rerank/tests/: conftest.py  test_hybrid.py
modules/06_query_understanding/: query_understanding.py  retriever_router.py
modules/06_query_understanding/tests/: conftest.py  test_router.py
modules/07_graph_filesystem/: entity_extractor.py  filesystem_skill.py  graph_indexer.py  graph_retriever.py
modules/07_graph_filesystem/tests/: conftest.py  test_graph.py
modules/08_multimodal/: document_parser.py  multimodal_retriever.py
modules/08_multimodal/tests/: conftest.py  test_parser.py
tests/: test_core.py
tests/eval/: test_benchmark.py  test_metrics.py
(+3 files in other folders)
