[project]
name = "agentic-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.7",
    "qdrant-client>=1.9",
    "rank-bm25>=0.2",
    "deepeval>=1.4",
    "neo4j>=5.20",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "spacy>=3.7",
    "transformers>=4.40",
    "torch>=2.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tqdm>=4.66",
    "datasets>=2.19",
    "openai>=1.30",
    "anthropic>=0.28",
    "jupyter>=1.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
